Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64792

Dev Build does not compile with gcc 7.2.0

    XMLWordPrintable

Details

    • 0b64810ada26ea1e7d19342f05f97e870ed1db1b

    Description

      In file included from /home/jm/qt.git/qt5/qtdeclarative/src/qml/jsruntime/qv4object_p.h:55:0,
                       from /home/jm/qt.git/qt5/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:44:
      /home/jm/qt.git/qt5/qtdeclarative/src/qml/jsruntime/qv4arraydata_p.h: In statischer Elementfunktion »static bool QV4::Runtime::method_storeElement(QV4::ExecutionEngine*, const QV4::Value&, const QV4::Value&, const QV4::Value&)«:
      /home/jm/qt.git/qt5/qtdeclarative/src/qml/jsruntime/qv4arraydata_p.h:148:48: Fehler: »idx« könnte in dieser Funktion uninitialisiert verwendet werden [-Werror=maybe-uninitialized]
           uint mappedIndex(uint index) const { index += offset; if (index >= values.alloc) index -= values.alloc; return index; }
                                                ~~~~~^~~~~~~~
      /home/jm/qt.git/qt5/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:653:10: Anmerkung: »idx« wurde hier deklariert
           uint idx;
                ^~~
      In file included from /home/jm/qt.git/qt5/qtdeclarative/src/qml/jsruntime/qv4object_p.h:55:0,
                       from /home/jm/qt.git/qt5/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:44:
      /home/jm/qt.git/qt5/qtdeclarative/src/qml/jsruntime/qv4arraydata_p.h: In statischer Elementfunktion »static QV4::ReturnedValue QV4::Runtime::method_loadElement(QV4::ExecutionEngine*, const QV4::Value&, const QV4::Value&)«:
      /home/jm/qt.git/qt5/qtdeclarative/src/qml/jsruntime/qv4arraydata_p.h:148:48: Fehler: »idx« könnte in dieser Funktion uninitialisiert verwendet werden [-Werror=maybe-uninitialized]
           uint mappedIndex(uint index) const { index += offset; if (index >= values.alloc) index -= values.alloc; return index; }
                                                ~~~~~^~~~~~~~
      /home/jm/qt.git/qt5/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:609:10: Anmerkung: »idx« wurde hier deklariert
           uint idx;
                ^~~

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shausman Simon Hausmann
            llsag85dywftnhuo Jan Murawski
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes