fix uninitialized variable warnings

Task-number: QTBUG-64792
Change-Id: I890f2ed57393ea3fc1c5640c56ac04e284a4ce32
Reviewed-by: Lars Knoll <lars.knoll@qt.io>